# inspired by https://github.com/denkiwakame/py-tiny-pkg/blob/main/pyproject.toml /Thanks!/

[build-system]

requires = [
    "setuptools >= 58.0",
    "wheel"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# include = []
# exclude = ["tests"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/pvreg/_version.py"

[project]
name = "pvreg"
version = "1.2.2"
#dynamic = ["version"]
description = "package to run 3-level latent regression model for educational value added"
authors = [{ name = "Bartosz Kondratek" }, { email = "everythingthatcounts@gmail.com" }]
maintainers = [{ name = "Bartosz Kondratek" }, { email = "everythingthatcounts@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = "==3.10.10"
dependencies = [
    "statsmodels == 0.13.5",
    "numpy == 1.24.2",
    "pandas == 1.5.3",
    "enlighten == 1.11.2",
    "multiprocess==0.70.14",
    "threadpoolctl == 3.1.0"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
keywords = ["educational value added",
    "latent regression",
    "multilevel regression",
    "mcmc",
    "irt"]
[project.urls]
Homepage = "https://github.com/bkondratek/pvreg"

